--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 	background-color: white;
 	color:gray;
 	text-align: center;
-	font-size: 4vh;
+	font-size: 3.5vh;
 	width: 25%;
 	height:25.5vh;
 }
@@ -14,7 +14,7 @@
 }
 #nameBox
 {
-	font-family: 'Georgia', Times, "Times New Roman",serif;
+	font-family: 'Francois One', sans-serif;
 	width: 45%;
 	font-size: 10vmin;
 	background-color: #4aaaa5;
@@ -88,5 +88,10 @@
 #rowThree
 {
 	height: 10vh;
+
+}
+form
+{
+	height: 18vh;
 
 }
