--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+.topLinks:link
+{
+	color:gray;
+}
+.topLinks:visited
+{
+	color:darkgray;
+}
+
 #linkBox
 {
 	background-color: white;
@@ -7,6 +16,7 @@
 	width: 25%;
 	height:25.5vh;
 }
+
 #blankSpace
 {
 	background-color: white;
