--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,3 +105,12 @@ form
 	height: 18vh;
 
 }
+#innerTable
+{
+	margin: 0;
+ 	padding:0;
+ 	table-layout: fixed;
+ 	background-color: white;
+ 	width: 100%;
+ 	height:100vh;
+}
